fix mobile horizontal overflow

--- a/src/index.css
+++ b/src/index.css
@@ -24,8 +24,11 @@
   --warm-black: #1A0F0F;
 }
 
-body {
+html, body {
   margin: 0;
+  padding: 0;
+  width: 100%;
+  overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--warm-black);
